fix(embedder): disable word-wrapping for Sidebar pane

--- a/embedder/sidebar-component.css
+++ b/embedder/sidebar-component.css
@@ -9,6 +9,7 @@ sidebar-component {
   padding: 10px;
   user-select: none;
   contain: strict;
+  white-space: nowrap;
 }
 
 sidebar-component
